# trix

./: .editorconfig  .envrc  .gitignore  Cargo.toml  LICENSE  README.md  direnvrc  flake.nix  package.nix  pyproject.toml
nix/: eval.nix  inputs.nix  repl.nix
src/: command.rs  common.rs  eval.rs  flake.rs  flake_url.rs  git.rs  lib.rs  lock.rs  main.rs  nix.rs  profile.rs  progress.rs  registry.rs  shebang.rs
src/cli/: build.rs  common.rs  copy.rs  develop.rs  diff.rs  eval.rs  flake.rs  fmt.rs  hash.rs  log.rs  mod.rs  profile.rs  registry.rs  repl.rs  run.rs  search.rs  shell.rs  style.rs  why_depends.rs
src/cli/copy/: command.rs
src/cli/develop/: command.rs
src/cli/eval/: command.rs
src/cli/flake/: check.rs  common.rs  init.rs  lock.rs  metadata.rs  mod.rs  new.rs  show.rs  update.rs
src/cli/flake/check/: command.rs
src/cli/flake/init/: command.rs
src/cli/flake/lock/: command.rs
src/cli/flake/metadata/: command.rs
src/cli/flake/new/: command.rs
src/cli/flake/show/: command.rs
src/cli/flake/update/: command.rs
src/cli/fmt/: command.rs
src/cli/hash/: convert.rs  file.rs  mod.rs  path.rs
src/cli/log/: command.rs
src/cli/os/: mod.rs
src/cli/profile/: common.rs  mod.rs
src/cli/profile/add/: command.rs
src/cli/profile/diff_closures/: command.rs
src/cli/profile/history/: command.rs
src/cli/profile/list/: command.rs
src/cli/profile/remove/: command.rs
src/cli/profile/rollback/: command.rs
src/cli/profile/upgrade/: command.rs
src/cli/profile/wipe_history/: command.rs
src/cli/registry/: mod.rs
src/cli/registry/add/: command.rs
src/cli/registry/list/: command.rs
src/cli/registry/remove/: command.rs
src/cli/repl/: command.rs
src/cli/run/: command.rs
src/cli/shell/: command.rs
src/cli/why_depends/: command.rs
src/resources/: eval.nix  eval_attr.nix  eval_category.nix  flake_config.nix  flake_inputs.nix  get_categories.nix  get_eval_preamble.nix  get_package_main_program.nix  helpers.nix  inputs.nix  repl.nix
src/trix/: __init__.py  cli.py  cli_flake.py  cli_profile.py  cli_registry.py  flake.py  lock.py  nix.py  profile.py  registry.py
tests/: build_file_integration.rs  build_integration.rs  cli_tests.rs  conftest.py  develop_integration.rs  eval_integration.rs  flake_show_integration.rs  fmt_legacy_test.rs  lock_integration.rs  metadata_integration.rs  os_integration.rs  override_input_integration.rs  profile_integration.rs  registry_integration.rs  repl_integration.rs  test_cli.py  test_compliance.py  test_comprehensive_compliance.py  test_flake.py  test_lock.py  test_nix.py  test_profile.py
