[package]
name = "trix"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
git2 = { version = "0.19", default-features = false }
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4"
dirs = "5.0.1"
once_cell = "1.19.0"
rayon = "1.8.1"
regex = "1.10.3"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.0"
tempfile = "3.10.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
walkdir = "2.4.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
