[package]
name = "trix"
version = "0.1.0"
edition = "2021"
description = "A Nix flake CLI that never copies your project to the store"
license = "MIT"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Error handling
anyhow = "1"

# Serialization (flake.lock)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time formatting
chrono = "0.4"

# Git metadata (without copying to store)
# Use system libgit2 to avoid conflicts with Nix's libgit2
# Version 0.20+ supports libgit2 1.9.x which matches nixpkgs
git2 = "0.20"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal colors (zero-alloc, supports NO_COLOR)
owo-colors = { version = "4", features = ["supports-colors"] }

# Progress indicators and spinners
indicatif = "0.17"

# HTTP client for fetching global registry
reqwest = { version = "0.11", features = ["blocking", "json"] }

# Home directory detection
dirs = "5"

# System hostname
hostname = "0.4"

# Shell expansion (~)
shellexpand = "3"

# Lazy static initialization
once_cell = "1"

# Regular expressions
regex = "1"

# Parallel iteration
rayon = "1"

# Temporary files
tempfile = "3"

# Directory traversal
walkdir = "2"

# Nix bindings for native evaluation
nix-bindings-util = "0.2"
nix-bindings-store = "0.2"
nix-bindings-expr = "0.2"
nix-bindings-flake = "0.2"
nix-bindings-fetchers = "0.2"

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
