[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trix"
version = "0.1.0"
description = "trick yourself into flakes"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
trix = "trix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trix"]

[tool.hatch.build.targets.wheel.shared-data]
"nix" = "share/trix/nix"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "SIM102", # nested if - sometimes more readable
    "SIM108", # ternary operator - sometimes less readable
    "SIM116", # dict vs if/elif - if/elif often clearer
    "SIM117", # nested with - sometimes more readable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # unused variables ok in tests

[tool.ruff.format]
quote-style = "single"
